# AppLib

./: .gitignore  .pre-commit-config.yaml  FUTURE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
applib/: __init__.py  app.py  version.py
applib/app/: core_app.py  home_interface.py  main_window.py  process_interface.py  settings_interface.py  settings_interface_app.py
applib/app/common/: auto_wrap.py  core_signalbus.py  core_stylesheet.py  icons.py  signal_bus.py  stylesheet.py
applib/app/components/: cardstack.py  console_view.py  fluent_label.py  infobar.py  input_view.py  link_card.py  menu_list_view.py  sample_card.py  samplecardview1.py  smart_text_edit.py
applib/app/components/dialogs/: messagebox.py  messagebox_base.py
applib/app/components/progresscards/: progress_bar_card.py  progress_card.py  progress_ring_card.py
applib/app/components/settingcards/: card_base.py
applib/app/components/settingcards/cards/: clustered_settingcard.py  expanding_settingcard.py  scroll_settingcardgroup.py  settingcard.py
applib/app/components/settingcards/widgets/: cardwidgetgroup.py  parent_settingwidgets.py  settingwidget.py
applib/app/components/settings/: __init__.py  base_setting.py  bool_setting.py  checkbox.py  checklist.py  color_picker.py  combobox.py  file_selection.py  line_edit.py  range_setting.py  slider.py  spinbox.py  switch.py
applib/app/generators/: card_generator.py  cardgeneratorbase.py  cardwidget_generator.py  generator_tools.py  generatorbase.py
applib/app/interfaces/: main_window.py  settings_interface.py  settings_subinterface.py
applib/app/interfaces/process/: process_interface.py
applib/assets/qss/dark/: batchjob_interface.qss  home_interface.qss  process_interface.qss  settings_interface.qss  settings_subinterface.qss
applib/assets/qss/dark/components/: console_view.qss  input_view.qss  progress_bar.qss  setting_card.qss  setting_widget.qss
applib/assets/qss/light/: batchjob_interface.qss  generic.qss  home_interface.qss  main_window.qss  process_interface.qss  settings_interface.qss  settings_subinterface.qss
applib/assets/qss/light/components/: console_view.qss  input_view.qss  progress_bar.qss  (+2 more)
applib/module/concurrency/process/: process_base.py  process_generator.py  process_gui.py  process_logger.py
applib/module/concurrency/thread/: thread_manager.py  thread_ui_streamer.py
applib/module/config/: app_config.py  config_base.py
applib/module/config/internal/: app_args.py
applib/module/config/templates/: app_template.py  template_base.py  template_docs.txt  template_enums.py
applib/module/config/tools/: config_tools.py  ini_file_parser.py  template_parser.py  validation_model_gen.py
applib/module/config/validators/: __init__.py  app_validator.py  generic_validator.py
applib/module/configuration/: mapping_base.py
applib/module/configuration/config/: config_base.py
applib/module/configuration/internal/: core_args.py
applib/module/configuration/templates/: base_template.py  core_template.py
applib/module/configuration/tools/: cli_arguments.py  config_tools.py  template_parser.py  validation_model.py  validation_model_gen.py
applib/module/datastructures/: trie.py
applib/module/exceptions/: __init__.py
applib/module/logger/: colorcodefilter.py  coloredformatter.py  logger.py
applib/module/logging/: __init__.py  colorcodefilter.py  coloredformatter.py  logger_utils.py  logging.py  logging_manager.py
applib/module/tools/: utilities.py
applib/module/tools/types/: config.py  general.py  gui_cardgroups.py  gui_cards.py  gui_cardstacks.py  gui_generators.py  gui_settings.py  templates.py
docs/concepts/config/: templates.md  validation.md
src/: main.py  test.py
src/applib/: __init__.py  app.py  main.py  version.py
src/applib/app/: core_app.py  home_interface.py  main_window.py  process_interface.py  settings_interface.py  settings_interface_app.py
src/applib/app/common/: __init__.py  auto_wrap.py  core_signalbus.py  core_stylesheet.py  icons.py
src/applib/app/components/: cardstack.py  console_view.py  flow_area.py  fluent_label.py  infobar.py  infobar_test.py  input_view.py  link_card.py  menu_list_view.py  sample_card.py  samplecardview1.py
src/applib/app/generators/: card_generator.py  cardwidget_generator.py  generator_tools.py  generatorbase.py
src/applib/app/interfaces/: home_interface.py  main_window.py  settings_interface.py  settings_subinterface.py
src/applib/module/config/: __init__.py  app_config.py  config_base.py  core_config.py
src/applib/module/configuration/: mapping_base.py
src/applib/module/datastructures/: arrayqueue.py  base.py  binarysearchtree.py  binarytree.py  binarytrie.py  linearhashtable.py  redblacktree.py  redblacktree_mapping.py  treap.py  trie.py  utils.py  xfasttrie.py  yfasttrie.py
src/applib/module/exceptions/: __init__.py
src/applib/module/logging/: __init__.py  create_logger.py  logger_utils.py  logging.py
src/applib/module/tools/: _git.py  decorators.py  utilities.py  version.py
src/test/interfaces/: home.py  mainwindow.py  process.py  settings.py
src/test/modules/concurrency/: test_file_program.py  test_process.py  test_process_gen.py
src/test/modules/config/: test_config.py
tests/automatic/: autotest.py
tests/automatic/configuration/tools/: nested_dict_search_test.py  test_nested_dict_search.py  test_validation_model_gen.py  util.py  validation_model_gen_test.py
tests/automatic/datastructures/: redblacktree_mapping_test.py  test_trie.py  trie_test.py
tests/manual/: mantest.py  test.py
tests/manual/interfaces/: home.py  mainwindow.py  process.py  settings.py
tests/manual/modules/concurrency/: test_file_program.py  test_process.py  test_process_gen.py
tests/manual/modules/config/: test_args.py  test_config.py
(+163 files in other folders)
