[build-system]
    build-backend="hatchling.build"
    requires=["hatchling"]

[project]
    authors=[{name="TheRealMorgenfrue"}]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Programming Language :: Python :: 3.12",
    ]
    dependencies=[
        "PyQt6-Fluent-Widgets==1.7.4",
        "PyQt6==6.8.1",
        "qasync==0.28.0",
        "tomlkit",
        "pydantic==2.9.2",
        "pydantic-settings==2.13",
        "colorama",
    ]
    description="An Application Component Library (short AppLib) which makes it easy to create fancy GUIs"
    dynamic=["version"]
    keywords=["fluent-design", "PyQt6"]
    license={file="LICENSE"}
    name="AppLib"
    readme="README.md"
    requires-python="==3.12.*"

    [project.urls]
        Documentation="https://example.com"
        Homepage="https://github.com/TheRealMorgenfrue/AppLib"
        Issues="https://github.com/TheRealMorgenfrue/AppLib/issues"

[dependency-groups]
    dev=[{include-group="lint"}, {include-group="test"}, {include-group="docs"}]
    docs=[
        "mkdocs-material",
        "mkdocs-git-revision-date-localized-plugin",
        "mkdocs-git-committers-plugin-2",
        "mkdocstrings-python>=2.0.3",
        "mike>=2.2.0",
        "mkdocs-exclude>=1.0.2",
    ]
    lint=["ruff"]
    test=["pytest", "pytest-cov"]

[tool.hatch.version]
    path="src/applib/version.py"

[tool.ruff]
    extend-exclude=[]

    [tool.ruff.format]
        docstring-code-format=true

[tool.pytest.ini_options]
    addopts=["--import-mode=importlib"]
    python_classes="Test*"
    python_files="test_*.py"
    python_functions="test_*"
    testpaths=["tests/automatic"]
